@@ -14,6 +14,8 @@
   * Add support for "DB_TXN->set_name()" and
     "DB_TXN->get_name()". The binding support for "DB_TXN"
     is now complete.
+  * Add support for "DB_REP_PERMANENT" flag.
+  * Add support for "DB_REP_CONF_NOAUTOINIT" flag.
 
 4.7.4:
   * Under Python 3.0, "bsddb.db.DB_VERSION_STRING",
